tests/analyzer/errors/block.rv
fn main() {
    // Void assignment
    var noval = {
        var integer = 1
    }

    var void_post_assign: int
    void_post_assign = {
        _ = 3 + 4
        var empty: bool
    }

    // Unused value
    {5}

    // Invalid type
    var a: int = {
        var nb = 7.5
        nb
    }
}
